
2017-05-26  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* system.def: replaced misleading name C$PRINTABLE (OC-extension,
	  not a C$ -> ACUCOBOL extension!) by CBL_GC_PRINTABLE (old name
	  still supported for legacy reasons)

2017-05-24  Edward Hart <edward.dan.hart@gmail.com>

	* common.c: fixed minor style issues, mostly missing spaces around
	  operators.

2017-05-18  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* system.def: added maximum call parameters for system library calls

2017-05-14  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* fileio.c: correctly update file status for DELETE FILE statement
	  (we always returned 00 until now)
	* fileio.c: 

2017-05-13  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* screenio.c (cob_move): return the status returned by (move)
	* screenio.c: FR #191 only set flag pending_accept when cob_move
	  returns no error

2017-05-12	Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.c (cob_sys_oc_nanosleep): prefer HAVE_NANO_SLEEP over _WIN32

2017-05-11  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* screenio.c (screen_display): FR #191 set flag pending_accept
	  for DISPLAY screen, too

2017-04-28  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.c (set_value, get_value): using correcting format modifier
	  for cob_s64_t (CB_FMT_LLD)

2017-04-27  Sergey Kashyrin <ska@kiska.net>

	* common.c (set_value, get_value): changed type long to cob_s64_t
	  as SORT was broken on Windows

2017-04-23  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.h: always use COB_KEYWORD_INLINE (set by configure)
	  for COB_INLINE

2017-04-18 Ron Norman <rjn@inglenet.com>

	* numeric.c, common.c, coblocal.h: define ISFINITE depending on
	  HAVE_ISFINITE to either use 'isfinite' or 'finite' or '_finite'

2017-04-10  Brian Tiffin <btiffin@gnu.org>

	* common.c, common.h: remove cob_get_prog_pointer in preference to
	  cob_get_pointer.
